addons/traefik/traefik-ingress/traefik-dashboard/traefik-dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: http,https
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - secretName: wildcard.fdisk.cc
  rules:
  - host: k8s-traefik.fdisk.cc
    http:
      paths:
      - backend:
          serviceName: traefik-ingress-dashboard
          servicePort: 8080
        path: /
